--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-error-reporter-action",
   "version": "1.0.0",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "author": "andoshin11 <shinglish11@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -13,7 +13,7 @@
   },
   "homepage": "https://github.com/gozala/typescript-error-reporter-action#readme",
   "scripts": {
-    "build": "tsc",
+    "build": "ncc build --out dist/index.js",
     "watch": "tsc -w",
     "clean": "rm -rf lib",
     "test:type": "tsc --noEmit --incremental false"
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/node": "^14.11.8",
+    "@vercel/ncc": "^0.27.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
