--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Report type check result on PR diff view.'
 author: 'andoshin11'
 runs:
   using: 'node12'
-  main: 'lib/index.js'
+  main: 'dist/index.js'
 branding:
   icon: 'check-circle'
   color: 'blue'
